update dual balance page

--- a/dual-balance.html
+++ b/dual-balance.html
@@ -70,26 +70,52 @@
 <div class="container" style="padding-top:100px">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-            <h2 style="text-align: center">Dual Balance</h2>
-            <hr class="star-primary">
-            <img src="resources/images/portfolio/5dualBalance.png" class="img-responsive img-centered" alt="">
-            <p>This game is currently available on Android platform, as I'm not in Apple's developer program and I can't
-                test it on iOS.
-                But I do plan to release it on the AppStore in the near future, after polishing it.</p>
-            <ul class="item-details">
-                <li>
-                    <strong>Date:</strong> November 2016
-                </li>
-                <li>
-                    <strong>Type:</strong> 3D cooperation mobile game
-                </li>
-                <li>
-                    <strong>My role:</strong> Game designer & programmer
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-download" aria-hidden="true"></i> Download not available yet</a>
-                </li>
-            </ul>
+            <div class="modal-body">
+                <h2 style="text-align: center">Dual Balance</h2>
+                <hr class="star-primary">
+                <div  style="text-align: center">
+                    <p>
+                        <strong>Date:</strong> November 2016
+                    </p>
+                    <p>
+                        <strong>Type:</strong> 3D cooperation mobile game
+                    </p>
+                    <p>
+                        <strong>My role:</strong> Game designer & programmer
+                    </p>
+                    <p>
+                        <a href="https://github.com/COMP4122/COMP3432-Innovative-Computing-Paradigm/releases/tag/alpha6"><i
+                                class="fa fa-download" aria-hidden="true"></i> Download (Android only)</a>
+                    </p>
+                </div>
+                <hr class="star-primary">
+                <div class="portfolio-description">
+                    <p>This is the group project for <em>COMP3432 Innovative Computing Paradigm</em> class at HK
+                        PolyU. This is a two-player game on the Android platform. </p>
+                    <img src="resources/images/portfolio/5dualBalance/8-new-start-page.png"
+                         class="img-responsive img-centered" alt="">
+                    <p>We decided to make this game because <strong>we miss the old days when there were plenty
+                        of local multiplayer games</strong>. Nowadays we are getting better and better graphics,
+                        but games tend to focus on competitions instead of cooperation. So we made a casual game
+                        in which players can beat levels in a happy and relaxed atmosphere. We focus on making
+                        levels that require cooperations.</p>
+                    <img src="resources/images/portfolio/5dualBalance/3pushBoxLevel.png"
+                         class="img-responsive img-centered" alt="">
+                    <p>Player one controls the left and right movement, and player two controls the up and down
+                        movement. They can also make the ball jump by rising their phones quickly at the same
+                        time.</p>
+                    <img src="resources/images/portfolio/5dualBalance/5ringLevel.png"
+                         class="img-responsive img-centered" alt="">
+                    <p>Everyone who has played this game agree that this game is super fun and can certainly
+                        connect them with their friends.</p>
+                    <img src="resources/images/portfolio/5dualBalance/6rollLevel.png"
+                         class="img-responsive img-centered" alt="">
+                    <p>This game is currently available only on Android platform. But we do plan to release it
+                        on the AppStore in the near future, after polishing it, and sharing the joy with more
+                        people.</p>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
