--- a/dual-balance.html
+++ b/dual-balance.html
@@ -55,10 +55,10 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#portfolio">Portfolio</a>
+                    <a href="http://www.yidizhu.com/#portfolio">Portfolio</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#about">About</a>
+                    <a href="http://www.yidizhu.com/#about">About</a>
                 </li>
             </ul>
         </div>
