added a footer for the new page

--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
                                     class="fa fa-envelope"></i></a>
                         </li>
                     </ul>
+                    Please let me know if you find any bugs on this site, thanks!
                 </div>
             </div>
         </div>
