--- a/dual-balance.html
+++ b/dual-balance.html
@@ -120,6 +120,59 @@
     </div>
 </div>
 
+<!-- Footer -->
+<footer class="text-center">
+    <div class="footer-above">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col col-md-6">
+                    <h3>Location</h3>
+                    <p>The Hong Kong Polytechnic University
+                        <br>Hung Hom, Hong Kong, China, 999077</p>
+                </div>
+                <div class="footer-col col-md-6">
+                    <h3>CONTACT</h3>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="https://www.facebook.com/zhuyidiwow" class="btn-social btn-outline"><i
+                                    class="fa fa-fw fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/zhuyidiwow" class="btn-social btn-outline"><i
+                                    class="fa fa-fw fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="http://weibo.com/zhuyidiwow/" class="btn-social btn-outline"><i
+                                    class="fa fa-fw fa-weibo"></i></a>
+                        </li>
+                        <li>
+                            <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i
+                                    class="fa fa-envelope"></i></a>
+                        </li>
+                    </ul>
+                    Please let me know if you find any bugs on this site, thanks!
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-below">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    Copyright &copy; Yidi Zhu 2016
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+<div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
+    <a class="btn btn-primary" href="#page-top">
+        <i class="fa fa-chevron-up"></i>
+    </a>
+</div>
+
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
