--- a/dual-balance.html
+++ b/dual-balance.html
@@ -20,7 +20,7 @@
     <!-- Custom Fonts -->
     <script src="https://use.fontawesome.com/48cbb5f483.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
           type="text/css"> -->
 
@@ -94,10 +94,10 @@
                     <img src="resources/images/portfolio/5dualBalance/8-new-start-page.png"
                          class="img-responsive img-centered" alt="">
                     <p>We decided to make this game because <strong>we miss the old days when there were plenty
-                        of local multiplayer games</strong>. Nowadays we are getting better and better graphics,
-                        but games tend to focus on competitions instead of cooperation. So we made a casual game
-                        in which players can beat levels in a happy and relaxed atmosphere. We focus on making
-                        levels that require cooperations.</p>
+                        of local multi-player games</strong>. Nowadays we are getting better and better graphics,
+                        but games tend to focus on competitions instead of co-operations. So we made a casual game
+                        in which players can beat levels in a happy and relaxed atmosphere, with your friends. We focus on making
+                        levels that require co-operations.</p>
                     <img src="resources/images/portfolio/5dualBalance/3pushBoxLevel.png"
                          class="img-responsive img-centered" alt="">
                     <p>Player one controls the left and right movement, and player two controls the up and down
@@ -110,7 +110,7 @@
                     <img src="resources/images/portfolio/5dualBalance/6rollLevel.png"
                          class="img-responsive img-centered" alt="">
                     <p>This game is currently available only on Android platform. But we do plan to release it
-                        on the AppStore in the near future, after polishing it, and sharing the joy with more
+                        on the AppStore in the near future, after polishing it, to share the joy with more
                         people.</p>
                 </div>
 
