--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                     <div class="caption">
                         <div class="caption-content">
                             <i>Primal Life</i>
+                            <p><i>(Ongoing project)</i></p>
                         </div>
                     </div>
                     <img src="resources/images/portfolio/6primalLife.png" class="img-responsive" alt="">
