--- a/index.html
+++ b/index.html
@@ -588,8 +588,8 @@
                                  class="img-responsive img-centered" alt="">
                             <p>In this game, we want to simulate the life in the primal age. The main character is an
                                 adult male, who is responsible for providing food for a whole family. He needs to go to
-                                different areas and hunt different animals, and brings food back to the cave where his
-                                family leaves so no one starves. So we can say this game focuses on hunting, collecting,
+                                different areas and hunt different animals, and bring enough food back to the cave where his
+                                family live so no one starves. So we can say this game focuses on hunting, collecting,
                                 and feeding. We want to create an emotional experience about care and concern. Wherever
                                 the player goes, he should always bear in mind that he should get food for his
                                 family.</p>
