totally accurate primitive simulator previously known as primal life

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                         <img src="resources/images/portfolio/6primalLife.png" class="img-responsive img-centered"
                              alt="">
                         <div class="portfolio-description">
-                            <p>This is an on-going group project for <em>COMP4122 Game Design and Development</em> class
+                            <p>This is the group project for <em>COMP4122 Game Design and Development</em> class
                                 at HK PolyU.</p>
                             <img src="resources/images/portfolio/6primalLife/1-meat.png"
                                  class="img-responsive img-centered" alt="">
@@ -595,12 +595,12 @@
                                 family.</p>
                             <img src="resources/images/portfolio/6primalLife/2-sea-view.png"
                                  class="img-responsive img-centered" alt="">
-                            <p>Currently we’ve build four scenes: the cave, the deep forest, the snowfield, and the
+                            <p>We built four scenes: the cave, the deep forest, the snowfield, and the
                                 desert. There will be different animals living in different areas, and the player need
                                 to hunt them one by one to get enough food.</p>
                             <img src="resources/images/portfolio/6primalLife/3-snowfield.png"
                                  class="img-responsive img-centered" alt="">
-                            <p>This project is still on-going, but we plan to finish it with in November 2016.</p>
+                            <p>This project is just finished, I'll update the details later on.</p>
                         </div>
                         <div class="item-details">
                             <p>
@@ -613,7 +613,7 @@
                                 <strong>Role:</strong> Game designer, level designer, animator, programmer
                             </p>
                             <p>
-                                <a href="#"><i class="fa fa-download" aria-hidden="true"></i> Download not available yet</a>
+                                <a href="https://github.com/COMP4122/COMP4122/releases"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                             </p>
                         </div>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
