--- a/taps.html
+++ b/taps.html
@@ -70,7 +70,7 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <div class="modal-body">
-                <h2 style="text-align: center">Totally Accurate Primitive Simulator</h2>
+                <h2 style="text-align: center">Totally Accurate Primitive Simulator <br>(Primal Life)</h2>
                 <hr class="star-primary">
                 <div  style="text-align: center">
                     <p>
@@ -83,7 +83,7 @@
                         <strong>Role:</strong> Game designer, level designer, animator, programmer
                     </p>
                     <p>
-                        <a href="https://github.com/COMP4122/COMP4122/releases"><i class="fa fa-download" aria-hidden="true"></i> Download not available yet</a>
+                        <a href="https://github.com/COMP4122/COMP4122/releases"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                     </p>
                 </div>
                 <hr class="star-primary">
