update descriptions and add dedicated pages

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="caption">
                         <div class="caption-content">
                             <i>Primal Life</i>
-                            <p><i>(Ongoing project)</i></p>
+                            <p><i>(Completed in November)</i></p>
                         </div>
                     </div>
                     <img src="resources/images/portfolio/6primalLife.png" class="img-responsive" alt="">
@@ -472,6 +472,16 @@
                                 strategies. The User’s Manual was made to assist the conduction of play test and
                                 evaluation of the game, and covers all inputs methods and guidelines for playing this
                                 game.</p>
+                            <p>I learned a lot from the process of making this game. As this is my final year project,
+                                I examined learning theories and design frameworks of serious games before diving to
+                                the design and development of this game, so I familiarized myself with the status of
+                                serious game research. During the design stage, I referred to a real construction project
+                                to make this game more realistic, and I practiced designing games with the DPE framework,
+                                which was proposed by Prof. Brian W. in 2007. I also` got a taste of conducting play test
+                                sessions during the evaluation of this stage. Although I did not have enough time to modify
+                                the game design based on players’ feedback, I realized the importance of sufficient play
+                                tests during game development.
+                            </p>
                         </div>
                         <div class="item-details">
                             <p>
@@ -492,6 +502,8 @@
                                                                                       aria-hidden="true"></i> User's
                                     Manual</a>
                             </p>
+                            <p><a href="http://www.yidizhu.com/yicon"><i class="fa fa-link"
+                                                                                     aria-hidden="true"></i> Dedicated Page</a></p>
                         </div>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
                             Close
@@ -555,6 +567,8 @@
                                 <a href="https://github.com/COMP4122/COMP3432-Innovative-Computing-Paradigm/releases/tag/alpha6"><i
                                         class="fa fa-download" aria-hidden="true"></i> Download (Android only)</a>
                             </p>
+                            <p><a href="http://www.yidizhu.com/dual-balance"><i class="fa fa-link"
+                                                                         aria-hidden="true"></i> Dedicated Page</a></p>
                         </div>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
                             Close
@@ -615,6 +629,8 @@
                             <p>
                                 <a href="https://github.com/COMP4122/COMP4122/releases"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
                             </p>
+                            <p><a href="http://www.yidizhu.com/taps"><i class="fa fa-link"
+                                                                         aria-hidden="true"></i> Dedicated Page</a></p>
                         </div>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
                             Close
