--- a/yicon.html
+++ b/yicon.html
@@ -70,53 +70,57 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <div class="modal-body">
-                <h2 style="text-align: center">Totally Accurate Primitive Simulator <br>(Primal Life)</h2>
+                <h2 style="text-align: center">YiCon</h2>
                 <hr class="star-primary">
                 <div style="text-align: center">
                     <p>
                         <strong>Date:</strong> November 2016
                     </p>
                     <p>
-                        <strong>Type:</strong> 3D Low-poly Survival Game
+                        <strong>Type:</strong> Serious Game - Construction Simulation
                     </p>
                     <p>
-                        <strong>Role:</strong> Game designer, level designer, animator, programmer
+                        <strong>Role:</strong> Game designer & programmer
                     </p>
                     <p>
-                        <a href="https://github.com/COMP4122/COMP4122/releases"><i class="fa fa-download"
-                                                                                   aria-hidden="true"></i> Download</a>
+                        <a href="https://github.com/zhuyidiwow/Construction/releases/tag/alpha"><i
+                                class="fa fa-download" aria-hidden="true"></i> Download</a>
+                    </p>
+                    <p>
+                        <a href="resources/articles/fyp/user's-manual.pdf"><i class="fa fa-book"
+                                                                              aria-hidden="true"></i> User's
+                            Manual</a>
                     </p>
                 </div>
                 <hr class="star-primary">
                 <div class="portfolio-description">
-                    <p>This is the group project for <em>COMP4122 Game Design and Development</em> class
-                        at HK PolyU. We finally changed the name to <i>"Totally Accurate Primitive Simulator"</i> after
-                        further discussion.</p>
-                    <img src="resources/images/portfolio/6primalLife/1-meat.png"
+
+                    <p>This game is developed for my final year project – “<em>A Serious Game for Construction
+                        Education – Development and Evaluation</em>”.</p>
+                    <img src="resources/images/portfolio/4yiCon.png" class="img-responsive img-centered" alt="">
+                    <p>In this project, I explored the possibility of using serious games to address problems
+                        existing in undergraduate-level construction education, and tried to develop a game to
+                        achieve this goal. I am quite proud that most play testers said this game did help them
+                        understand the construction process and the dynamic nature of project management.</p>
+                    <img src="resources/images/portfolio/4yiCon/7-best-viewport.png"
                          class="img-responsive img-centered" alt="">
-                    <p>In this game, we want to simulate the life in the primal age. The main character is an
-                        adult male, who is responsible for providing food for a whole family. He needs to go to
-                        different areas and hunt different animals, and bring enough food back to the cave where his
-                        family live so no one starves. So we can say this game focuses on hunting, collecting,
-                        and feeding. We want to create an emotional experience about care and concern. Wherever
-                        the player goes, he should always bear in mind that he should get food for his
-                        family.</p>
-                    <img src="resources/images/portfolio/6primalLife/2-sea-view.png"
+                    <img src="resources/images/portfolio/4yiCon/13-construction-display-info.png"
                          class="img-responsive img-centered" alt="">
-                    <p>We built four scenes: the cave, the deep forest, the snowfield, and the
-                        desert. There will be different animals living in different areas, and the player need
-                        to hunt them one by one to get enough food.</p>
-                    <img src="resources/images/portfolio/6primalLife/3-snowfield.png"
-                         class="img-responsive img-centered" alt="">
-                    <p>In the development process, what I learned the most is on teamwork. Although I am comfortable
-                        with general teamwork, making games is different and brings more challenges on project
-                        management. We spent a lot of figuring out how to control the versions with Github when using
-                        Unity3D for development. We also spent a lot of time on work distribution and integration. In
-                        the design stage, we made several designs that seemed fun but were almost impossible to
-                        implement during the project’s time frame. So I get a better sense of scoping during game design
-                        and managing the whole process of game development.
+                    <p>In this game, the player plays the role of a project manager, whose goal is to minimize
+                        project time and cost of a simulated project through optimizing labor allocation
+                        strategies. The User’s Manual was made to assist the conduction of play test and
+                        evaluation of the game, and covers all inputs methods and guidelines for playing this
+                        game.</p>
+                    <p>I learned a lot from the process of making this game. As this is my final year project,
+                        I examined learning theories and design frameworks of serious games before diving to
+                        the design and development of this game, so I familiarized myself with the status of
+                        serious game research. During the design stage, I referred to a real construction project
+                        to make this game more realistic, and I practiced designing games with the DPE framework,
+                        which was proposed by Prof. Brian W. in 2007. I also` got a taste of conducting play test
+                        sessions during the evaluation of this stage. Although I did not have enough time to modify
+                        the game design based on players’ feedback, I realized the importance of sufficient play
+                        tests during game development.
                     </p>
-                    <p>This project is just finished, I'll update the details later on.</p>
                 </div>
 
             </div>
@@ -130,8 +134,8 @@
                  */
 
                 var disqus_config = function () {
-                    this.page.url = "http://www.yidizhu.com/taps";  // Replace PAGE_URL with your page's canonical URL variable
-                    this.page.identifier = "totally-accurate-primitive-simulator"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                    this.page.url = "http://www.yidizhu.com/yicon";  // Replace PAGE_URL with your page's canonical URL variable
+                    this.page.identifier = "yicon"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
                 };
 
                 (function () { // DON'T EDIT BELOW THIS LINE
