--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright &copy; Yidi Zhu 2016
+                    Copyright &copy; Yidi Zhu 2016. Adapted from <a href="http://startbootstrap.com/template-overviews/freelancer">Freelancer Theme</a>
                 </div>
             </div>
         </div>
