Upload GGJ game

--- a/index.html
+++ b/index.html
@@ -170,6 +170,33 @@
     </div>
 </section>
 
+<!-- News Section -->
+<section id="news">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>What's Up</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 news-item">
+                <a href="ggj2017.html" class="news-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <p>Global Game Jam 2017!</p>
+                            <p>Best Theme Integration Award</p>
+                            <p><i style="font-size: 29px">(click to read more)</i></p>
+                        </div>
+                    </div>
+                    <img src="resources/images/news/ggj-photo.jpg" class="news-image" alt="">
+                </a>
+            </div>
+
+        </div>
+    </div>
+</section>
+
 <!-- About Section -->
 <section class="success" id="about">
     <div class="container">
