Add ripple blossom to the portfolio

--- a/index.html
+++ b/index.html
@@ -166,6 +166,17 @@
                 </a>
             </div>
 
+            <div class="col-sm-4 portfolio-item">
+                <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i>Ripple Blossom</i>
+                            <p><i>(GGJ2017 HK Site, Best Theme Integration Award)</i></p>
+                        </div>
+                    </div>
+                    <img src="resources/images/portfolio/7conferenceMGT.png" class="img-responsive" alt="">
+                </a>
+            </div>
         </div>
     </div>
 </section>
@@ -529,8 +540,10 @@
                                                                                       aria-hidden="true"></i> User's
                                     Manual</a>
                             </p>
-                            <p><a href="http://www.yidizhu.com/yicon"><i class="fa fa-link"
-                                                                                     aria-hidden="true"></i> Dedicated Page</a></p>
+                            <p>
+                                <a href="http://www.yidizhu.com/yicon">
+                                <i class="fa fa-link" aria-hidden="true"></i> Dedicated Page</a>
+                            </p>
                         </div>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
                             Close
@@ -719,6 +732,108 @@
                             <p>
                                 <a href="resources/images/portfolio/7conferenceMGT/Documentation.pdf"><i
                                         class="fa fa-book" aria-hidden="true"></i> Documentation</a>
+                            </p>
+                        </div>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
+                            Close
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>Ripple Blossom</h2>
+                        <hr class="star-primary">
+                        <img src="resources/images/portfolio/7conferenceMGT.png" class="img-responsive img-centered"
+                             alt="">
+                        <div class="portfolio-description">
+                            <p>This game is made during global game jam 2017, Hong Kong site!</p>
+                            <p>
+                                Here is the video.
+                            </p>
+
+                            <p>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/nDf87uHAoeg" frameborder="0" allowfullscreen></iframe>
+                            </p>
+                            
+                            <p>
+                                And here is the download page! You can also play online <a href="rb/index.html">here</a>.
+                            </p>
+                            <h3>Our Team</h3>
+                                <p> 
+                                    <img src="resources/images/news/ggj-members.jpg" class="img-responsive">
+                                </p>
+
+                                <p>
+                                    We have six members in our team, all from the Hong Kong Polytechnic University. Our roles are:
+                                </p>
+
+                                <p><i>Liu Chang:</i> UI Designer</p>
+                                
+                                <p><i>Tian Yuxuan:</i> Artist</p>
+
+                                <p><i>Zhao Tianyi:</i> Level and audio designer</p>
+
+                                <p><i>Zhu Yidi (me):</i> Gameplay designer and engineer</p>
+
+                                <p><i>Peng Tao:</i> System architect</p>
+
+                                <p><i>Chen Yuji:</i> Artist</p>
+
+                                <h3>Setting </h3>
+                                <p>
+                                    Our game is set in a pool. Lotus and lotus leaves are floating on the water, and fishes are swimming around.
+
+                                </p>
+                                <p>
+                            <img src="resources/images/portfolio/8-ripple-blossom/static.png" class="img-responsive">
+                            </p>
+
+                                <h3>Game play </h3>
+                                <p>
+                                    When you type in the water, you spawn a wave there. Waves expand and intersect at sleeping lotus. If two waves intersect at a pink lotus, the pink lotus will be waken.
+                                </p>
+
+                                <h3>Goal </h3>
+                                <p>
+                                    Your goal is to use the power of waves to wave all lotus in the pool. The less waves you spawn, the better.
+                                </p>
+                                <p>
+                            <img src="resources/images/portfolio/8-ripple-blossom/waken.png" class="img-responsive">
+                            </p>
+
+                            <h3>Art Style </h3>
+                            <p>
+                                We created a traditional Chinese art style with low polygon graphics. Every piece of artwork is made during these two days. Chinese instruments are selected for the background music.
+                            </p>
+
+                        </div>
+                        <div class="item-details">
+                            <p>
+                                <strong>Date:</strong> January 2017
+                            </p>
+                            <p>
+                                <strong>Type:</strong> Puzzle Game
+                            </p>
+                            <p>
+                                <strong>Role:</strong> Gameplay designer and engieer
+                            </p>
+                            <p>
+                                <a href="http://www.yidizhu.com/ggj2017.html">
+                                <i class="fa fa-link" aria-hidden="true"></i> Dedicated Page</a>
                             </p>
                         </div>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
