Fixed portfolio image

--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
                     <div class="caption">
                         <div class="caption-content">
                             <i>Ripple Blossom</i>
-                            <p><i>(GGJ2017 HK Site, Best Theme Integration Award)</i></p>
+                            <p style="font-size: 12px"><i>(GGJ2017 HK Site, Best Theme Integration Award)</i></p>
                         </div>
                     </div>
-                    <img src="resources/images/portfolio/7conferenceMGT.png" class="img-responsive" alt="">
+                    <img src="resources/images/portfolio/8-ripple-blossom/title.png" class="img-responsive" alt="">
                 </a>
             </div>
         </div>
@@ -757,7 +757,7 @@
                     <div class="modal-body">
                         <h2>Ripple Blossom</h2>
                         <hr class="star-primary">
-                        <img src="resources/images/portfolio/7conferenceMGT.png" class="img-responsive img-centered"
+                        <img src="resources/images/portfolio/8-ripple-blossom/title.png" class="img-responsive img-centered"
                              alt="">
                         <div class="portfolio-description">
                             <p>This game is made during global game jam 2017, Hong Kong site!</p>
@@ -771,6 +771,10 @@
                             
                             <p>
                                 And here is the download page! You can also play online <a href="rb/index.html">here</a>.
+                            </p>
+
+                            <p>
+                                <iframe frameborder="0" src="https://itch.io/embed/113467" width="552" height="167" style="margin: 0 auto"></iframe>
                             </p>
                             <h3>Our Team</h3>
                                 <p> 
