Fixed an anchor bug

--- a/rb/index.html
+++ b/rb/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Ripples Blossom</title>
+    <title>Ripples Blossom</title>
     <style>
     /* a style sheet needs to be present for cursor hiding and custom cursors to work. */
     </style>
   </head>
   <body>
+  <p>Please wait for the game to complete loading. You may need to zoom your broswer.</p>
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="1080px" width="1920px"></canvas>
     <script type='text/javascript'>
   var Module = {
