--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12 news-item">
-                <a href="ggj2017.html" class="news-link" data-toggle="modal">
+                <a href="http://www.yidizhu.com/ggj2017.html" class="news-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <p>Global Game Jam 2017!</p>
