--- a/ggj2017.html
+++ b/ggj2017.html
@@ -79,7 +79,7 @@
                 </p>
                     <p>
                         Just came back from <a href="http://globalgamejam.org/2017/jam-sites/hong-kong">Global Game Jam 2017 Hong Kong Site</a>.
-                        This is also my first game jam! However, our team got the <b>Best Theme Integration</b>!
+                        This is also my first game jam! However, our team got the <b>Best Theme Integration</b> award!
                     </p>
 
                     <p> 
