Fix iframe size on mobile

--- a/ggj2017.html
+++ b/ggj2017.html
@@ -87,7 +87,7 @@
                     </p>
 
                     <p>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/nDf87uHAoeg" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="560" height="315" style="max-width: 100%" src="https://www.youtube.com/embed/nDf87uHAoeg" frameborder="0" allowfullscreen></iframe>
                     </p>
                     
                     <p>
@@ -95,7 +95,7 @@
                     </p>
 
                     <p>
-                        <iframe frameborder="0" src="https://itch.io/embed/113467" width="552" height="167" style="margin: 0 auto"></iframe>
+                        <iframe frameborder="0" src="https://itch.io/embed/113467" width="552" height="167" style="margin: 0 auto; max-width: 100%"></iframe>
                     </p>
 
                     <h3>Our Team</h3>
