update main page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="intro-text">
                     <span class="name">Yidi Zhu</span>
                     <hr class="star-light">
-                    <span class="skills">An Aspiring Game Designer</span>
+                    <span class="intro">I want to spend my whole life making games.</span>
                 </div>
             </div>
         </div>
@@ -336,7 +336,7 @@
                                 <strong>Type:</strong> 2D Platformer
                             </p>
                             <p>
-                                <strong>Role:</strong> Game designer & programmer
+                                <strong>Role:</strong> Game designer and programmer
                             </p>
                             <p>
                                 <a href="https://github.com/zhuyidiwow/Interdisciplinary-Design/releases/tag/v1"><i
@@ -399,7 +399,7 @@
                                 <strong>Type:</strong> First Person Shooter
                             </p>
                             <p>
-                                <strong>Role:</strong> Game designer & programmer
+                                <strong>Role:</strong> Game designer and programmer
                             </p>
                             <p>
                                 <a href="https://github.com/zhuyidiwow/Box-Shooter/releases/tag/v0.1"><i
@@ -462,7 +462,7 @@
                                 <strong>Type:</strong> Running
                             </p>
                             <p>
-                                <strong>Role:</strong> Game designer & programmer
+                                <strong>Role:</strong> Game designer and programmer
                             </p>
                             <p>
                                 <a href="https://github.com/zhuyidiwow/Tomb-Victims/releases/tag/0.1"><i
@@ -529,7 +529,7 @@
                                 <strong>Type:</strong> Serious Game - Construction Simulation
                             </p>
                             <p>
-                                <strong>Role:</strong> Game designer & programmer
+                                <strong>Role:</strong> Game designer and programmer
                             </p>
                             <p>
                                 <a href="https://github.com/zhuyidiwow/Construction/releases/tag/alpha"><i
@@ -601,7 +601,7 @@
                                 <strong>Type:</strong> 3D cooperation mobile game
                             </p>
                             <p>
-                                <strong>Role:</strong> Game designer & programmer
+                                <strong>Role:</strong> Game designer and programmer
                             </p>
                             <p>
                                 <a href="https://github.com/COMP4122/COMP3432-Innovative-Computing-Paradigm/releases/tag/alpha6"><i
@@ -640,21 +640,23 @@
                                 at HK PolyU.</p>
                             <img src="resources/images/portfolio/6primalLife/1-meat.png"
                                  class="img-responsive img-centered" alt="">
-                            <p>In this game, we want to simulate the life in the primal age. The main character is an
+                            <p>
+                                In this game, we want to simulate the life in the primal age. The main character is an
                                 adult male, who is responsible for providing food for a whole family. He needs to go to
                                 different areas and hunt different animals, and bring enough food back to the cave where his
                                 family live so no one starves. So we can say this game focuses on hunting, collecting,
                                 and feeding. We want to create an emotional experience about care and concern. Wherever
                                 the player goes, he should always bear in mind that he should get food for his
                                 family.</p>
-                            <img src="resources/images/portfolio/6primalLife/2-sea-view.png"
-                                 class="img-responsive img-centered" alt="">
-                            <p>We built four scenes: the cave, the deep forest, the snowfield, and the
+                            <img src="resources/images/portfolio/6primalLife/2-sea-view.png" class="img-responsive img-centered" alt="">
+                            <p>
+                                We built four scenes: the cave, the deep forest, the snowfield, and the
                                 desert. There will be different animals living in different areas, and the player need
                                 to hunt them one by one to get enough food.</p>
                             <img src="resources/images/portfolio/6primalLife/3-snowfield.png"
                                  class="img-responsive img-centered" alt="">
-                            <p>This project is just finished, I'll update the details later on.</p>
+                            <p>
+                                Although we made completed core gameplay mechanics (crafting, picking up objects, shooting, dying and respawning), we didn't have enough time to implement everything we wrote in our Game Design Document. We had the design that if the player collect more food than needed, one child would be born so there is one more member in the family. However, we didn't implement it in the game.</p>
                         </div>
                         <div class="item-details">
                             <p>
