--- a/resources/poems/c7.html
+++ b/resources/poems/c7.html
@@ -4,10 +4,10 @@
 
     <h4 class="margin30">作者: 向秀</h4>
 
-    <h5>余与嵇康、吕安居止接近，其人并有不羁之才。
-        然嵇志远而疏，吕心旷而放，其后各以事见法。
-        嵇博综技艺，于丝竹特妙。临当就命，顾视日影，索琴而弹之。余逝将西迈，经其旧庐。
-        于时日薄虞渊，寒冰凄然。邻人有吹笛者，发音寥亮。追思曩昔游宴之好，感音而叹，故作赋云：</h5>
+    <h5>余与嵇康、吕安居止接近，其人并有不羁之才。</h5>
+    <h5>然嵇志远而疏，吕心旷而放，其后各以事见法。</h5>
+    <h5>嵇博综技艺，于丝竹特妙。临当就命，顾视日影，索琴而弹之。余逝将西迈，经其旧庐。</h5>
+    <h5>于时日薄虞渊，寒冰凄然。邻人有吹笛者，发音寥亮。追思曩昔游宴之好，感音而叹，故作赋云：</h5>
 
     <p>将命适于远京兮，遂旋反而北徂。</p>
 
