--- a/resources/poems/e4.html
+++ b/resources/poems/e4.html
@@ -1,34 +1,34 @@
 <article class="container-fluid bg-1 text-center english">
 
-    <h3 class="margin30 englishH3">Lament of the Highbourne</h3>
+    <h3 class="margin30 englishH3">August</h3>
 
-    <h4 class="margin30 englishH4">Author: Thalassian</h4>
+    <h4 class="margin30 englishH4">Author: Lizette Woodworth Reese</h4>
 
-    <p>Anar'alah, Anar'alah belore</p>
+    <p>No wind, no bird. The river flames like brass.</p>
 
-    <p>Sin'dorei</p>
+    <p>On either side, smitten as with a spell</p>
 
-    <p>Shindu fallah na</p>
+    <p>Of silence, brood the fields. In the deep grass,</p>
 
-    <p>Sin'dorei</p>
+    <p>Edging the dusty roads, lie as they fell</p>
 
-    <p>Anar'alah</p>
+    <p>Handfuls of shriveled leaves from tree and bush.</p>
 
-    <p>Shindu Sin'dorei</p>
+    <p>But ’long the orchard fence and at the gate,</p>
 
-    <p>Shindu fallah na</p>
+    <p>Thrusting their saffron torches through the hush,</p>
 
-    <p>Sin'dorei</p>
+    <p>Wild lilies blaze, and bees hum soon and late.</p>
 
-    <p>Anar'alah belore</p>
+    <p>Rust-colored the tall straggling briar, not one</p>
 
-    <p>Shindu Sin'dorei</p>
+    <p>Rose left. The spider sets its loom up there</p>
 
-    <p>Shindu fallah na</p>
+    <p>Close to the roots, and spins out in the sun</p>
 
-    <p>Sin'dorei</p>
+    <p>A silken web from twig to twig. The air</p>
 
-    <p>Anar'alah belore</p>
+    <p>Is full of hot rank scents. Upon the hill</p>
 
-    <p>Belore</p>
+    <p>Drifts the noon’s single cloud, white, glaring, still.</p>
 </article>
