Update poem layout

--- a/resources/poems/e6.html
+++ b/resources/poems/e6.html
@@ -1,8 +1,8 @@
 <article class="container-fluid bg-1 text-center english">
 
-    <h3 class="margin30 englishH3">Hermitage</h3>
+    <h3 class="margin30 englishH3">A Gift</h3>
 
-    <h4 class="margin30 englishH4">Author: Joseph Fasano</h4>
+    <h4 class="margin30 englishH4">Author: Leonora Speyer</h4>
 
 	<p>I Woke: —</p>
 
