--- a/dual-balance.html
+++ b/dual-balance.html
@@ -101,7 +101,7 @@
                     <img src="resources/images/portfolio/5dualBalance/3pushBoxLevel.png"
                          class="img-responsive img-centered" alt="">
                     <p>Player one controls the left and right movement, and player two controls the up and down
-                        movement. They can also make the ball jump by rising their phones quickly at the same
+                        movement. They can also make the ball jump by raising their phones quickly at the same
                         time.</p>
                     <img src="resources/images/portfolio/5dualBalance/5ringLevel.png"
                          class="img-responsive img-centered" alt="">
