--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                                 <p>We decided to make this game because <strong>we miss the old days when there were plenty
                                 of local multiplayer games</strong>. Nowadays we are getting better and better graphics, but games tend to focus on competitions instead of cooperation. So we made a casual game in which players can beat levels in a happy and relaxed atmosphere. We focus on making levels that require cooperations.</p>
                                 <img src="resources/images/portfolio/5dualBalance/3pushBoxLevel.png" class="img-responsive img-centered" alt="">
-                                <p>Player one controls the left and right movement, and player two controls the up and down movement. They can also make the ball jump by rising their phones quickly at the same time.
+                                <p>Player one controls the left and right movement, and player two controls the up and down movement. They can also make the ball jump by raising their phones quickly at the same time.
                                 </p>
                                 <img src="resources/images/portfolio/5dualBalance/5ringLevel.png" class="img-responsive img-centered" alt="">
                                 <p>Everyone who has played this game agree that this game is super fun and can certainly connect them with their friends.</p>
